syntax = "proto3";

package authentication;

service AuthenticationService {
  rpc SignUp (SignUpDto) returns (Undefined);
  rpc signIn (SignInDto) returns (SignInResponse);
}

message SignUpDto{
  string email = 1;
  string password = 2;
}


message SignInDto{
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message Undefined {}
