syntax = "proto3";

package iam;

service IamService {
  rpc SignUp (SignUpDto) returns (Undefined);
  rpc SignIn (SignInDto) returns (TokensResponse);
  rpc RefreshTokens (RefreshingTokenDto) returns (TokensResponse);
}

message SignUpDto{
  string fullName = 1;
  string nickname = 2;
  string email = 3;
  string password = 4;
}


message SignInDto{
  string email = 1;
  string password = 2;
}

message RefreshingTokenDto {
  string refreshingToken = 1;
}

message TokensResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message Undefined {}
